Fix: bug with modifiable list